# mdbook-playscript

./: CHANGELOG.md  Cargo.toml  README.md  README_ja.md
.github/workflows/: rust.yml
examples/: build_books.rs
examples/figaro/: .gitignore  book.toml
examples/figaro/src/: cover.md
examples/torikaeshi/: book.toml
examples/torikaeshi/src/: cover.md  preface.md  scene_1.md
figaro/: acte_1.html  characters.html  cover.html  index.html  mdplayscript.css  print.html  searchindex.js  searchindex.json
figaro/acte_1/: scene_1.html  scene_2.html  scene_3.html
public/: mdplayscript.css  mdplayscript_ja.css  playscript-count.js
src/: counter.rs  lib.rs  main.rs
torikaeshi/: 404.html  cover.html  index.html  mdplayscript_ja.css  playscript-count.js  preface.html  print.html  scene_1.html  searchindex.js  searchindex.json
