[package]
name = "mdbook-playscript"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ShotaroTsuji/mdbook-playscript"
description = "Preprocessor for mdBook, which styles stage play scripts"
readme = "README.md"
categories = ["text-processing"]
keywords = ["markdown", "pulldown-cmark", "stage", "play"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
structopt = "0.3.21"
mdbook = "0.4.6"
serde_json = "1.0.59"
mdplayscript = "0.2.0"
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }
