[package]
name = "mdbook-playscript"
version = "0.4.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/ShotaroTsuji/mdbook-playscript"
description = "Preprocessor for mdBook, which styles stage play scripts"
readme = "README.md"
categories = ["text-processing"]
keywords = ["markdown", "pulldown-cmark", "stage", "play"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
structopt = "0.3.21"
toml = "0.5.8"
mdbook = "0.4.6"
rand = "0.8.4"
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }
serde_json = "1.0.59"
mdplayscript = { git = "https://github.com/ShotaroTsuji/mdplayscript", branch = "develop" }
japanese-ruby-filter = { version = "0.1.0", features = ["pulldown-cmark-filter"] }
log = "0.4"
env_logger = "0.8.3"
